<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bk"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/btn_Layout"
        android:layout_width="fill_parent"
        android:layout_height="145dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/add_infobk" >
        
        <Button
            android:id="@+id/btnOK"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="35dp"
            android:background="@drawable/btn_add_btnbk_switch"
            android:minHeight="35dp"
            android:text="@string/txt_add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="35dp"
            android:background="@drawable/btn_add_btnbk_switch"
            android:minHeight="35dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </RelativeLayout>
    
    	<RelativeLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="match_parent"
    	    android:layout_above="@id/btn_Layout"
    	    android:background="@drawable/all_bk"
    	    android:descendantFocusability="blocksDescendants"
    	    android:orientation="vertical" >
        
	    <ListView
	        android:id="@+id/lstCameraList"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:divider="#DDDDDD"
	        android:dividerHeight="0.5dp" />
	    
	    <TextView
	        android:id="@+id/txt_null_device"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:text="@string/txt_no_device_avaliable"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:visibility="gone" />
	    
    </RelativeLayout>

</RelativeLayout>